# rules_nodejs_word_boundary_resolution

./: BUILD.bazel  README.md  WORKSPACE.bazel  package.json
src/: BUILD.bazel  index.ts
src/name/: BUILD.bazel  index.ts  index_spec.ts
src/name-something/: index.ts
src/nameDASHsomething/: index.ts
src/not-name-something/: index.ts
